k8s/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-wsl-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-wsl-app
  template:
    metadata:
      labels:
        app: hello-wsl-app
    spec:
      containers:
        - name: hello-wsl
          image: localhost:5000/hello-wsl:1.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /opt/hello-wsl
              name: hello-wsl-pv-storage
      volumes:
        - name: hello-wsl-pv-storage
          persistentVolumeClaim:
            claimName: hello-wsl-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: hello-wsl-internal-service
  namespace: app
spec:
  selector:
    app: hello-wsl-app
  ports:
    - protocol: TCP
      port: 49999
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-wsl-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: wsl2host
      http:
        paths:
          - path: /hello-wsl(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: hello-wsl-internal-service
                port:
                  number: 49999
